--- a/WumpusIA/build.gradle
+++ b/WumpusIA/build.gradle
@@ -16,7 +16,9 @@ repositories {
 
 dependencies {
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
+    compile group: 'com.google.guava', name: 'guava', version: '12.0'
     compile 'org.graphstream:gs-core:1.2'
+    compile 'org.graphstream:gs-algo:1.0'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
